agregue link de css

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="CursoBlazorWebAssembly.styles.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
+    <link href="{CursoBlazorWebAssembly}.style.css" rel="stylesheet"/>
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
 </head>
